TERRAFORM-TERRAGRUNT/1BasicWithouModules/environments/test/vpc/2-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "test-igw"
  }
}
